[22.January 2009]
- ability.rb: RD->RDoc
- warior.rb: arrow speed-up
- viking.rb: repeated calls of methods 'next_[left|top]' replaced with
  instance variables with values assigned once per update
- game.rb, freevikings.rb: profiler from Ruby's standard library replaced with
  ruby-prof (ruby-prof is compiled and thus game runs at 2 fps during
  profiling, while with stdlib profiler it was cca 0.1 fps :) )

[21.January 2009]
- gfx/mjolnir.png, gfx/killtoy.tga, entities/killtoy.rb: Old "killtoy" 
  replaced with new graphic made by Magnus Nygaard
- game.rb: modification according to flog's warnings
- viking.rb: many temporary "build-check-drop" Rectangles replaced
  by two auxiliary Rectangle instances used repeatedly

[20.January 2009]
- monstermixins.rb: small cosmetic modification
- entities/bear.rb: Bear attacks with delay of 2 seconds
- level LockKeys: added to be able to see all versions of locks and keys 
  in the game (because I wanted to test images contributed by Magnus Nygaard)

[10.January 2009]
- structuredworld.rb: I just touched the documentation
- initfv.rb, game.rb: finished selecting of campaign
- locs/Tests.../Ancient.../First/first_script.rb: fixed (was broken)
- initfv.rb, freevikings.rb, levelsuite.rb: commandline option --levelsuite
  fixed; some code (finding title of Level(Suite) in a directory) from 
  initfv.rb moved to class LevelSuite and reused in freevikings.rb

[9.January 2009] 
- FREEVIKINGS BROKEN UP! CHECK OUT OLDER VERSION TO PLAY!
- initfv.rb: Select to choose campaign
- structuredworld.rb, levelsuite.rb: requirement stuff cleared a bit
- config/... : added new config entry (dirs with campaigns)

[8.January 2009]
- passwordedit.rb: RD->RDoc
- topmenu.rb: added change_proc feature (argument of FVC...new has always
  been there, but didn't do anything), removed class DisplayModeChooseButton
  (not needed - FVConfiguratorButton with right Proc can do the same work)